fix: accordion shifted when opening in safari (ios)

--- a/src/components/Accordion/index.scss
+++ b/src/components/Accordion/index.scss
@@ -4,6 +4,8 @@
   @apply grid
     w-full
     gap-2.5;
+
+  height: fit-content;
 }
 
 .accordion-header {
